# search_index_test

./: Cargo.toml  query.json  query1.json
src/: main.rs  only_read_directory.rs  query_builder.rs  query_builder2.rs  query_parser.rs
src/query/: cat_query.rs  mod.rs
tantivy-0.10.2/: .cargo_vcs_info.json  Cargo.toml
tantivy-0.10.2/src/: docset.rs  lib.rs
tantivy-0.10.2/src/directory/: directory.rs  error.rs  mod.rs  read_only_source.rs
tantivy-0.10.2/src/postings/: mod.rs  segment_postings.rs
tantivy-0.10.2/src/query/: all_query.rs  empty_query.rs  exclude.rs  intersection.rs  mod.rs  reqopt_scorer.rs  scorer.rs  union.rs  vec_docset.rs
tantivy-0.10.2/src/query/bitset/: mod.rs
tantivy-0.10.2/src/query/boolean_query/: mod.rs
tantivy-0.10.2/src/query/phrase_query/: phrase_scorer.rs
tantivy-0.10.2/src/query/term_query/: term_scorer.rs
