[package]
name = "search_query"
version = "0.1.0"
authors = ["dong <810776886@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = {path = "tantivy-0.10.2"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
fs2 = { version = "0.4"}
atomicwrites = {version = "0.2.2"}